--- a/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
+++ b/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
@@ -45,8 +45,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeaderAutoFilterProvider.cs" />
-    <Compile Include="CellStyleProviders\EmbeddedCellStyleProvider.cs">
+    <Compile Include="Helpers\CellStyleProvider.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CellTypeConverters\BooleanConverter.cs" />
@@ -57,8 +56,12 @@
     <Compile Include="CellTypeConverters\DoubleConverter.cs" />
     <Compile Include="CellTypeConverters\FloatConverter.cs" />
     <Compile Include="CellTypeConverters\ICellTypeValueConverter.cs" />
+    <Compile Include="Helpers\ExcelBuilderExtensions.cs" />
+    <Compile Include="ISheetBuilderDecorator.cs" />
+    <Compile Include="Helpers\ListExtensions.cs" />
+    <Compile Include="Helpers\SheetBuilderExtensions.cs" />
+    <Compile Include="Helpers\SpreadsheetDocumentExtensions.cs" />
     <Compile Include="Helpers\StringValidationMessageExtensions.cs" />
-    <Compile Include="IAutoFilterProvider.cs" />
     <Compile Include="ICellTypeValueConverterFactory.cs" />
     <Compile Include="CellTypeConverters\IntConverter.cs" />
     <Compile Include="CellTypeConverters\LongConverter.cs" />
@@ -68,16 +71,22 @@
     <Compile Include="CellTypeConverters\StringConverter.cs" />
     <Compile Include="Helpers\TypeExtensions.cs" />
     <Compile Include="IExcelParser.cs" />
-    <Compile Include="ISheetBuilderFactory.cs" />
     <Compile Include="ISheetParser.cs" />
+    <Compile Include="Helpers\SpreadsheetAttributeHelper.cs" />
+    <Compile Include="SheetDecorators\AutoFilterSheetDecorator.cs" />
+    <Compile Include="ColumnDefinition.cs" />
+    <Compile Include="ExcelBuilder.cs" />
+    <Compile Include="SheetDecorators\AutoFitWidthSheetDecorator.cs" />
+    <Compile Include="SheetDecorators\HeaderSheetDecorator.cs" />
+    <Compile Include="IColumnDefinition.cs" />
     <Compile Include="IExcelBuilder.cs" />
     <Compile Include="ISheetBuilder.cs" />
-    <Compile Include="Helpers\SpreadsheetAttributeHelper.cs" />
-    <Compile Include="ICellStyleProvider.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ExcelBuilder.cs" />
-    <Compile Include="ExcelParser.cs" />
+    <Compile Include="ISheetDefinition.cs" />
     <Compile Include="SheetBuilder.cs" />
+    <Compile Include="SheetDecorators\HeaderStyleSheetDecorator.cs" />
+    <Compile Include="SheetDecorators\TextStyleSheetDecorator.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ExcelParser.cs" />
     <Compile Include="SheetParser.cs" />
     <Compile Include="Validations\DefaultSequentialRuleValidator.cs" />
     <Compile Include="Validations\IValidationError.cs" />
