--- a/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
+++ b/Medidata.Rave.Tsdv.Loader/Medidata.Rave.Tsdv.Loader.csproj
@@ -52,12 +52,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\ListExtensions.cs" />
     <Compile Include="ITsdvReportLoader.cs" />
-    <Compile Include="SheetDefinitions\v1\SheetBuilderFactory.cs" />
-    <Compile Include="SheetDefinitions\v1\TsdvSheetBuilder.cs" />
     <Compile Include="SheetDefinitions\v1\TsdvReportLoader.cs" />
-    <Compile Include="SheetDefinitions\TsdvReportGenericBuilder.cs" />
+    <Compile Include="TemplatedExcelBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -98,6 +95,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
