--- a/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
+++ b/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.csproj
@@ -37,6 +37,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -70,7 +72,7 @@
     <Compile Include="SheetDecorators\AutoFilterSheetDecorator.cs" />
     <Compile Include="ColumnDefinition.cs" />
     <Compile Include="ExcelBuilder.cs" />
-    <Compile Include="SheetDecorators\AutoFitWidthSheetDecorator.cs" />
+    <Compile Include="SheetDecorators\AutoFitColumnSheetDecorator.cs" />
     <Compile Include="SheetDecorators\HeaderSheetDecorator.cs" />
     <Compile Include="IColumnDefinition.cs" />
     <Compile Include="IExcelBuilder.cs" />
